--- a/src/app/Public/product-list.component.html
+++ b/src/app/Public/product-list.component.html
@@ -1,1 +1,10 @@
-<p>product-list works!</p>
+<h2>Here is the list of products:</h2>
+
+<div *ngFor="let product of productsList">
+  <p>Id: {{product.Id}}</p>
+  <p>Name: {{product.Name}}</p>
+</div>
+
+<div *ngIf="productsList.length < 10">
+  <p>Product list has less than 10 items.</p>
+</div>
